chnage src from vishal 15-06-2019

--- a/src/main/webapp/addClientDetail.html
+++ b/src/main/webapp/addClientDetail.html
@@ -27,14 +27,21 @@
     				<input type="text" class="form-control">
   				</div>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-6">
 				<div class="form-group">
     				<span>Loan Amount:</span>
     				<input type="text" class="form-control">
   				</div>
 			</div>
 			
-			<div class="col-lg-4">
+			<div class="col-lg-6">
+				<div class="form-group">
+    				<span>Client Mobile:</span>
+    				<input type="text" class="form-control">
+  				</div>
+			</div>
+			
+			<div class="col-lg-6">
 				<div class="form-group">
     				<span>Installment:</span>
     				<select class="form-control">
@@ -45,7 +52,7 @@
   				</div>
 			</div>
 			
-			<div class="col-lg-4">
+			<div class="col-lg-6">
 				<div class="form-group">
     				<span>Payment Date:</span>
     				<input type="date" class="form-control">
@@ -77,6 +84,13 @@
 			<div class="col-lg-4">
 				<div class="form-group">
     				<span>Nominee Relation:</span>
+    				<input type="text" class="form-control">
+  				</div>
+			</div>
+			
+			<div class="col-lg-4">
+				<div class="form-group">
+    				<span>Client Mobile:</span>
     				<input type="text" class="form-control">
   				</div>
 			</div>
