--- a/src/main/webapp/payClientPayment.html
+++ b/src/main/webapp/payClientPayment.html
@@ -1,12 +1,22 @@
 <div ng-controller="payClientPaymentCtrl" class="row">
 	<div class="col-lg-2 tab-css"  ng-click="setViewDetailsTab()" style="background-color: green"><span>View Details</span></div>
 	<div class="col-lg-12">
-		<div class="row"  style="padding-top: 30px">
+		<div class="row well"  style="padding-top: 30px">
 			<div class="">
-				<div class="col-lg-3">
-				</div>
-				<div class="col-lg-5 well">
+				<div class="col-lg-12">
 					<h2><center>Fill Details</center></h2>
+				</div>
+				<div class="col-lg-4">
+					<div class="form-group">
+    					<span>Client Type :</span>
+    					<select class="form-control">
+    						<option>--Select--</option>
+    						<option value="0">Finance</option>
+    						<option value="1">Real Estate</option>
+    					</select>
+  					</div>
+  				</div>
+				<div class="col-lg-4">
 					<div class="form-group">
     					<span>Scheme Name:</span>
     					<select class="form-control">
@@ -16,6 +26,8 @@
     						<option>Scheme 3</option>
     					</select>
   					</div>
+  				</div>
+  				<div class="col-lg-4">
   					<div class="form-group">
     					<span>Mobile Number:</span>
     					<select class="form-control">
@@ -25,6 +37,8 @@
     						<option>Mobile 3</option>
     					</select>
   					</div>
+  				</div>
+  				<div class="col-lg-4">
   					<div class="form-group">
     					<span>Payment Type :</span>
     					<select class="form-control">
@@ -35,22 +49,58 @@
     						<option>DD</option>
     					</select>
   					</div>
+  				</div>
+  				<div class="col-lg-4">
   					<div class="form-group">
     					<span>Amount:</span>
     					<input type="text" class="form-control">
   					</div>
+  				</div>
+  				<div class="col-lg-4">
   					<div class="form-group">
     					<span>Date:</span>
     					<input type="date" class="form-control">
   					</div>
+  				</div>
+  				<div class="col-lg-4">
   					<div class="form-group">
     					<span>Discription:</span>
     					<textarea class="form-control"></textarea>
   					</div>
-  					
+  				</div>
   					<button type="submit" class="btn btn-success" ng-click="">Submit</button>
 				</div>
 			</div>
-			
+			<div class="row well">
+				<div class="col-lg-12"><h4><center>Client Details</center></h4></div>
+				<div class="col-lg-12">
+				<div class="table-responsive">
+  					<table class="table">
+   						<thead>
+      						<tr>
+      					    	<th>Name</th>
+        						<th>Father / Husband Name</th>
+        						<th>Executive name</th>
+        						<th>Parmanent Address</th>
+        						<th>Local Address</th>
+        						<th>Registration Date</th>
+        						<th>Client Type</th>
+      						</tr>
+    					</thead>
+    					<tbody>
+    						<tr>
+    							<td></td>
+    							<td></td>
+    							<td></td>
+    							<td></td>
+    							<td></td>
+    							<td></td>
+    							<td></td>
+    						</tr>
+    					</tbody>
+  					</table>
+				</div>
+				</div>
+			</div>
 	</div>
 </div>
