--- a/src/main/webapp/officeExpenses.html
+++ b/src/main/webapp/officeExpenses.html
@@ -6,19 +6,16 @@
 <div class="col-lg-12">
 	<div class="" style="margin-top: 10px; margin-bottom: 10px">
 		<div class="col-lg-1">From : </div>
-		<div class="col-lg-2"><input type="date" placeholder="dd/mm/yyyy" class="form-control"></div>
+		<div class="col-lg-2"><input id="fromDate" ng-model="fromDate" type="text" placeholder="dd/mm/yyyy" class="form-control"></div>
 	<div class="col-lg-1">To : </div>
-	<div class="col-lg-2"><input type="date" placeholder="dd/mm/yyyy" class="form-control"></div>
+	<div class="col-lg-2"><input id="toDate" ng-model="toDate" type="text" placeholder="dd/mm/yyyy" class="form-control"></div>
 	<div class="col-lg-1" >Payee Name : </div>
 	<div class="col-lg-2">
-		<select class="form-control">
-			<option>--Select--</option>
-			<option>Payee 1</option>
-			<option>Payee 2</option>
-			<option>Payee 3</option>
-		</select>
+	
+	<select ng-model="blah" ng-model="payeeNameId" ng-options="item.id as item.payeeName for item in payees"></select>
+
 	</div>
-	<div class="col-lg-1"><button class="btn btn-success">Get Details</button></div>
+	<div class="col-lg-1"><button class="btn btn-success" ng-click="getDetails()">Get Details</button></div>
 	</div>
 	
 </div>
