--- a/src/main/webapp/payClientPayment.html
+++ b/src/main/webapp/payClientPayment.html
@@ -4,7 +4,7 @@
 		<div class="row well"  style="padding-top: 30px">
 			<div class="">
 				<div class="col-lg-12">
-					<h2><center>Fill Details</center></h2>
+					<h4><center>Fill Details</center></h4>
 				</div>
 				<div class="col-lg-4">
 					<div class="form-group">
@@ -47,6 +47,7 @@
     						<option>Cash</option>
     						<option>Cheque</option>
     						<option>DD</option>
+    						<option>Other</option>
     					</select>
   					</div>
   				</div>
@@ -62,7 +63,7 @@
     					<input type="date" class="form-control">
   					</div>
   				</div>
-  				<div class="col-lg-4">
+  				<div class="col-lg-12">
   					<div class="form-group">
     					<span>Discription:</span>
     					<textarea class="form-control"></textarea>
