--- a/src/main/webapp/officeExpenses.html
+++ b/src/main/webapp/officeExpenses.html
@@ -12,7 +12,7 @@
 	<div class="col-lg-1" >Payee Name : </div>
 	<div class="col-lg-2">
 	
-	<select ng-model="blah" ng-model="payeeNameId" ng-options="item.id as item.payeeName for item in payees"></select>
+	<select class="form-control" ng-model="blah" ng-model="payeeNameId" ng-options="item.id as item.payeeName for item in payees"></select>
 
 	</div>
 	<div class="col-lg-1"><button class="btn btn-success" ng-click="getDetails()">Get Details</button></div>
@@ -21,7 +21,7 @@
 </div>
 	
 		<div class="col-lg-12" style="margin-left: -10px;">
-			<div ui-grid="gridOptions" ui-grid-selection class="myGrid"  style="height:480px" ></div>
+			<div ui-grid="gridOptions" ui-grid-selection class="myGrid"  style="height:435px" ></div>
 		</div>
 	
 	
