add grid in pay client payment

--- a/src/main/webapp/payClientPayment.html
+++ b/src/main/webapp/payClientPayment.html
@@ -75,32 +75,8 @@
 			<div class="row well">
 				<div class="col-lg-12"><h4><center>Client Details</center></h4></div>
 				<div class="col-lg-12">
-				<div class="table-responsive">
-  					<table class="table">
-   						<thead>
-      						<tr>
-      					    	<th>Name</th>
-        						<th>Father / Husband Name</th>
-        						<th>Executive name</th>
-        						<th>Parmanent Address</th>
-        						<th>Local Address</th>
-        						<th>Registration Date</th>
-        						<th>Client Type</th>
-      						</tr>
-    					</thead>
-    					<tbody>
-    						<tr>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    							<td></td>
-    						</tr>
-    					</tbody>
-  					</table>
-				</div>
+				
+				<div ui-grid="{ data: users }" class="myGrid"></div>
 				</div>
 			</div>
 	</div>
